@@ -16,6 +16,8 @@ Amended some of the error handling, especially target definition.
 Added constructors to allow the Gant script to be a parameter.  This allows programs (including the tests)
 not to have to use a command line apporach to starting Gant.  Many of the tests refactored.
 
+Added extra options in the LaTeX tool execution to avoid any interactive mode of LaTeX.
+
 
 1.0.2 ( r8867 )
 ---------------
